--- a/lesson-5/functions.html
+++ b/lesson-5/functions.html
@@ -10,7 +10,11 @@
 
 <body>
 	<h1>Functions</h1>
-	<p>In order to reduce the amount of code needed for an application, developers must identify blocks of code that can be reused, and arrange them into functions that can be called up when needed. This week we will focus on how to define a function, invoke it, pass along parameters, and also to manage variable scope.</p>
+	<p>In order to reduce the amount of code needed for an application, 
+		developers must identify blocks of code that can be reused, 
+		and arrange them into functions that can be called up when needed.
+		This week we will focus on how to define a function, invoke it,
+		pass along parameters, and also to manage variable scope.</p>
 	<button id="step2">Run Function</button>
 </body>
 </html>
