Initialize an array to hold the selected words

--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -5,6 +5,7 @@
 	<title>Assignment 1 | COMP1073 Client-Side JavaScript</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="css/styles.css" rel="stylesheet" />
+    <script src="js/index.js" defer></script>
 </head>
 
 <body>
@@ -137,11 +138,14 @@
             </div>
             <div class="random-button">
                 <div>
-                    <button>Surpise</button>
+                    <button id="surprise-button">Surprise</button>
                 </div>
                 <div>
-                    <button>Playback</button>
+                    <button id="playback-button">Playback</button>
                 </div>
+            </div>
+            <div class = "story-output">
+                <p id="story">Your story will appear here....</p>
             </div>
         </div>
     </section>
