added style to the html form in CSS

--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Assignment 2 | COMP1073 Client-Side JavaScript</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link href="css/styles.css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet" />
     <script src="js/index.js" defer></script>
 </head>
 
@@ -14,6 +14,7 @@
     <h2>The Smoothie Machine</h2>
 
     <div class="container">
+        <p>Welcome to the Smoothie Machine! Please fill out the form below to order your smoothie.</p>
         <form id="smoothie form">
             <fieldset>
                 <label for name="name">Name:</label>
