--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <header class="header"></header>
-    <h1>Assignment 2</h2>
+    <h1>Assignment 2</h1>
     <h2>The Smoothie Machine</h2>
 
     <div class="container">
         <p>Welcome to the Smoothie Machine! Please fill out the form below to order your smoothie.</p>
-        <form id="smoothie form">
+        <form id="smoothie-form">
             <fieldset>
                 <label for name="name">Name:</label>
                 <input type="text" id="name" name="name" required />
