Added a switch statement for size of cup

--- a/Assignment-2/index1.html
+++ b/Assignment-2/index1.html
@@ -13,7 +13,7 @@
     <h1>Assignment 2</h1>
     <h2>The Smoothie Machine</h2>
 
-    <div class="checkout-form">
+    <div id="checkout-form">
         <p>Checkout</p>
         <fieldset>
             <div>Customer Name: <span id="name"></span></div><br>
