--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -17,7 +17,7 @@
         <p>Welcome to the Smoothie Machine! Please fill out the form below to order your smoothie.</p>
         <form id="smoothie-form">
             <fieldset>
-                <label for name="name">Name:</label>
+                <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required />
                 <br>
                 <label for="email">Email:</label>
