Added Pricing functionality for the size of smoothie cup

--- a/Assignment-2/index1.html
+++ b/Assignment-2/index1.html
@@ -23,6 +23,7 @@
             <div>Size: <span id="size"></span></div><br>
             <div>Flavor: <span id="flavor"></span></div><br>
             <div>Additional Ingredients: <span id="ingredients"></span></div><br>
+            <div>Total Price: <span id="totalPrice"></span></div><br>
             <p>If you would like to edit some details, click here</p>
             <a href="index.html">
                 <button class="btn">Edit</button>
