Added CSS Styling and made some changes to the js file, added even more weather features

--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -12,6 +12,8 @@
     <h1>Weather App</h1>
     <input type="text" id="city" placeholder="Enter city name" />
     <button id="get-weather">Get Weather</button>
+    <div id="weather-icon"></div>
+    <div id="weather-area"></div>
     <div id="weather-result"></div>
 </body>
 
